# python-h264-scratch

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  debug_mb_positions.py  debug_mb_trace.py  debug_nal_processing.py  debug_nc.py  debug_slice_header.py  fix_coeff_tables.py  pyproject.toml  requirements.txt  trace_decode.py  trace_mb0_decode.py  verify_coeff_token.py  verify_run_before.py  verify_total_zeros.py
bitstream/: README.md  __init__.py  bit_reader.py  nal_parser.py  numpy_bit_reader.py
color/: README.md  __init__.py  chroma_format.py  yuv_to_rgb.py
container/: README.md  __init__.py  mp4.py
deblock/: README.md  boundary.py  deblock.py  filter.py  thresholds.py
debug/: __init__.py  mb_position_tracker.py  test_mb_tracker.py
decoder/: README.md  __init__.py  decoder.py  error_concealment.py  frame.py  i8x8.py  mbaff.py  mmco.py  poc.py
dequant/: README.md  __init__.py  chroma_qp.py  dequant.py
docs/: ARCHITECTURE.md  AUDIT.md  PROGRESS.md  REAL_VIDEO_PLAN.md  SESSION_SUMMARY.md  SPEC_MAPPING.md  TESTING.md
entropy/: README.md  __init__.py  cabac_arith.py  cabac_binarize.py  cabac_context.py  cabac_macroblock.py  cabac_residual.py  cabac_syntax.py  cavlc.py  cbp.py  tables.py
inter/: README.md  __init__.py  b_macroblock.py  b_reconstruct.py  bipred.py  direct_mode.py  motion_comp.py  mv_prediction.py  p_macroblock.py  p_reconstruct.py  reference.py  weighted_pred.py  weighted_prediction.py
intra/: README.md  __init__.py  chroma_pred.py  i_pcm.py  intra_16x16.py  intra_4x4.py  intra_8x8.py
parameters/: README.md  __init__.py  pps.py  (+2 more)
(+123 files in other folders)
