[project]
name = "h264-decoder"
version = "0.1.0"
description = "Pure Python H.264 video decoder — pixel-perfect, no C extensions"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pillow>=9.0",
]

[tool.pytest.ini_options]
testpaths = [
    "bitstream/tests",
    "color/tests",
    "container/tests",
    "deblock/tests",
    "decoder/tests",
    "dequant/tests",
    "entropy/tests",
    "inter/tests",
    "intra/tests",
    "parameters/tests",
    "reconstruct/tests",
    "slice/tests",
    "transform/tests",
]
